build/log.txt
[  3%] Building CXX object CMakeFiles/VoxelGame.dir/src/Application.cpp.o
In file included from /home/bastian/dev/projects/VoxelGame/src/../include/EventDispatcher.h:4,
                 from /home/bastian/dev/projects/VoxelGame/src/../include/Application.h:4,
                 from /home/bastian/dev/projects/VoxelGame/src/Application.cpp:1:
/home/bastian/dev/projects/VoxelGame/src/../include/Event.h:49:26: error: ‘static _Event::EventType _Event::CursorEvent::type()’ cannot be declared
   49 |         static EventType type() override final;
      |                          ^~~~
/home/bastian/dev/projects/VoxelGame/src/../include/Event.h:21:27: error:   since ‘virtual _Event::EventType _Event::Event::type()’ declared in base class
   21 |         virtual EventType type() = 0;
      |                           ^~~~
/home/bastian/dev/projects/VoxelGame/src/../include/Event.h:49:26: error: ‘static _Event::EventType _Event::CursorEvent::type()’ marked ‘final’, but is not virtual
   49 |         static EventType type() override final;
      |                          ^~~~
/home/bastian/dev/projects/VoxelGame/src/../include/Event.h:49:26: error: ‘static _Event::EventType _Event::CursorEvent::type()’ marked ‘override’, but does not override
/home/bastian/dev/projects/VoxelGame/src/../include/Event.h:59:26: error: ‘static _Event::EventType _Event::ScrollEvent::type()’ cannot be declared
   59 |         static EventType type() override final;
      |                          ^~~~
/home/bastian/dev/projects/VoxelGame/src/../include/Event.h:21:27: error:   since ‘virtual _Event::EventType _Event::Event::type()’ declared in base class
   21 |         virtual EventType type() = 0;
      |                           ^~~~
/home/bastian/dev/projects/VoxelGame/src/../include/Event.h:59:26: error: ‘static _Event::EventType _Event::ScrollEvent::type()’ marked ‘final’, but is not virtual
   59 |         static EventType type() override final;
      |                          ^~~~
/home/bastian/dev/projects/VoxelGame/src/../include/Event.h:59:26: error: ‘static _Event::EventType _Event::ScrollEvent::type()’ marked ‘override’, but does not override
/home/bastian/dev/projects/VoxelGame/src/../include/Event.h:69:26: error: ‘static _Event::EventType _Event::FramebufferSizeEvent::type()’ cannot be declared
   69 |         static EventType type() override final;
      |                          ^~~~
/home/bastian/dev/projects/VoxelGame/src/../include/Event.h:21:27: error:   since ‘virtual _Event::EventType _Event::Event::type()’ declared in base class
   21 |         virtual EventType type() = 0;
      |                           ^~~~
/home/bastian/dev/projects/VoxelGame/src/../include/Event.h:69:26: error: ‘static _Event::EventType _Event::FramebufferSizeEvent::type()’ marked ‘final’, but is not virtual
   69 |         static EventType type() override final;
      |                          ^~~~
/home/bastian/dev/projects/VoxelGame/src/../include/Event.h:69:26: error: ‘static _Event::EventType _Event::FramebufferSizeEvent::type()’ marked ‘override’, but does not override
/home/bastian/dev/projects/VoxelGame/src/../include/Event.h:80:26: error: ‘static _Event::EventType _Event::EnterChunkEvent::type()’ cannot be declared
   80 |         static EventType type() override final;
      |                          ^~~~
/home/bastian/dev/projects/VoxelGame/src/../include/Event.h:21:27: error:   since ‘virtual _Event::EventType _Event::Event::type()’ declared in base class
   21 |         virtual EventType type() = 0;
      |                           ^~~~
/home/bastian/dev/projects/VoxelGame/src/../include/Event.h:80:26: error: ‘static _Event::EventType _Event::EnterChunkEvent::type()’ marked ‘final’, but is not virtual
   80 |         static EventType type() override final;
      |                          ^~~~
/home/bastian/dev/projects/VoxelGame/src/../include/Event.h:80:26: error: ‘static _Event::EventType _Event::EnterChunkEvent::type()’ marked ‘override’, but does not override
/home/bastian/dev/projects/VoxelGame/src/Application.cpp: In member function ‘void Application::handleKeys(Event*)’:
/home/bastian/dev/projects/VoxelGame/src/Application.cpp:4:5: error: ‘KeyEvent’ was not declared in this scope; did you mean ‘_Event::KeyEvent’?
    4 |     KeyEvent* kE = event->get<KeyEvent>();
      |     ^~~~~~~~
      |     _Event::KeyEvent
In file included from /home/bastian/dev/projects/VoxelGame/src/../include/EventDispatcher.h:4,
                 from /home/bastian/dev/projects/VoxelGame/src/../include/Application.h:4,
                 from /home/bastian/dev/projects/VoxelGame/src/Application.cpp:1:
/home/bastian/dev/projects/VoxelGame/src/../include/Event.h:29:12: note: ‘_Event::KeyEvent’ declared here
   29 |     struct KeyEvent : public Event {
      |            ^~~~~~~~
/home/bastian/dev/projects/VoxelGame/src/Application.cpp:4:15: error: ‘kE’ was not declared in this scope
    4 |     KeyEvent* kE = event->get<KeyEvent>();
      |               ^~
/home/bastian/dev/projects/VoxelGame/src/Application.cpp:4:25: error: invalid use of incomplete type ‘class Event’
    4 |     KeyEvent* kE = event->get<KeyEvent>();
      |                         ^~
In file included from /home/bastian/dev/projects/VoxelGame/src/../include/Application.h:3,
                 from /home/bastian/dev/projects/VoxelGame/src/Application.cpp:1:
/home/bastian/dev/projects/VoxelGame/src/../include/World.h:16:7: note: forward declaration of ‘class Event’
   16 | class Event;
      |       ^~~~~
/home/bastian/dev/projects/VoxelGame/src/Application.cpp:4:41: error: expected primary-expression before ‘)’ token
    4 |     KeyEvent* kE = event->get<KeyEvent>();
      |                                         ^
/home/bastian/dev/projects/VoxelGame/src/Application.cpp: In constructor ‘Application::Application()’:
/home/bastian/dev/projects/VoxelGame/src/Application.cpp:24:5: error: ‘EventDispatcher’ has not been declared
   24 |     EventDispatcher::attachToWindow(m_window);
      |     ^~~~~~~~~~~~~~~
/home/bastian/dev/projects/VoxelGame/src/Application.cpp:26:5: error: ‘EventDispatcher’ has not been declared
   26 |     EventDispatcher::addCallback(std::bind(&Application::handleKeys, this, std::placeholders::_1), EventType::KEY_EVENT);
      |     ^~~~~~~~~~~~~~~
/home/bastian/dev/projects/VoxelGame/src/Application.cpp:26:100: error: ‘EventType’ has not been declared
   26 |     EventDispatcher::addCallback(std::bind(&Application::handleKeys, this, std::placeholders::_1), EventType::KEY_EVENT);
      |                                                                                                    ^~~~~~~~~
make[2]: *** [CMakeFiles/VoxelGame.dir/build.make:63: CMakeFiles/VoxelGame.dir/src/Application.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:76: CMakeFiles/VoxelGame.dir/all] Error 2
make: *** [Makefile:84: all] Error 2
